--- a/training/hyper-parameter-finding.ipynb
+++ b/training/hyper-parameter-finding.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grid search class which finds the best parameters based on the provided scoring method"
+    "Grid search class which finds the best parameters for the classifier based on the provided scoring method"
    ]
   },
   {
