--- a/evaluation/binary_classificator_metrics.ipynb
+++ b/evaluation/binary_classificator_metrics.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy classification score.\n",
+    "#### Accuracy classification score.\n",
     "In multilabel classification, this function computes subset accuracy: \n",
     "the set of labels predicted for a sample must exactly match the corresponding set of labels in y_true."
    ]
@@ -200,6 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Presion\n",
     "The precision is the ratio tp / (tp + fp) where tp is the number of true positives \n",
     "and fp the number of false positives. The precision is intuitively the ability \n",
     "of the classifier not to label as positive a sample that is negative."
@@ -229,6 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Recall\n",
     "The recall is the ratio tp / (tp + fn) where tp is the number of true positives \n",
     "and fn the number of false negatives. \n",
     "The recall is intuitively the ability of the classifier to find all the positive samples."
@@ -258,6 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### F1 score\n",
     "The F1 score can be interpreted as a weighted average of the precision and recall,\n",
     "where an F1 score reaches its best value at 1 and worst score at 0.\n",
     "The relative contribution of precision and recall to the F1 score are equal. \n",
